--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Kalmus Labs</title>
 
   <!-- Favicon -->
-<link rel="icon" type="image/png" href="logo_main.png" sizes="32x32">
-<link rel="icon" type="image/png" href="logo_main.png" sizes="192x192">
-<link rel="apple-touch-icon" href="logo_main.png">
-<link rel="shortcut icon" href="logo_main.png">
-<link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="logo_main.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="logo_main.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="logo_main.png">
+  <link rel="shortcut icon" href="logo_main.png">
+  <link rel="manifest" href="manifest.json">
 
   <!-- Google Font for body -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -105,6 +105,7 @@
     <p class="join-sub seq">Build the future with us - not as a cog, but as an owner.</p>
 
     <div class="cards">
+      <!-- 1. Tech Lead -->
       <div class="card reveal">
         <h3>👨‍💻 Tech Lead</h3>
         <p>Shape the architecture and ship from MVP → v1.</p>
@@ -113,29 +114,103 @@
           <li>Fast decisions, real ownership</li>
           <li>LLM pipelines, quality foundations</li>
         </ul>
-        <a href="https://wellfound.com/l/2BEAUM" target="_blank" class="btn small primary equal-btn">Apply now</a>
+        <a href="https://wellfound.com/l/2BGFdL" target="_blank" class="btn small primary equal-btn">Apply now</a>
       </div>
 
+      <!-- 2. Backend Engineers (x2) -->
       <div class="card reveal">
-        <h3>💻 Engineers</h3>
-        <p>Build AI-powered products for real learners.</p>
+        <h3>🛠️ Backend Engineer <span class="badge">×2</span></h3>
+        <p>Build robust APIs, data flows, and AI/RAG services.</p>
         <ul class="mini">
-          <li>Ship end-to-end features</li>
-          <li>Use AI as a force multiplier</li>
-          <li>Grow into core roles</li>
+          <li>FastAPI, Postgres/Redis, CI/CD</li>
+          <li>Vector DBs & embeddings</li>
+          <li>Own reliability & performance</li>
         </ul>
-        <a href="mailto:founder@kalmuslabs.com?subject=Engineer%20-%20Kalmus%20Labs" class="btn small primary equal-btn">Apply now</a>
+        <a href="https://wellfound.com/l/2BGCUZ" target="_blank" class="btn small primary equal-btn">Apply now</a>
       </div>
 
+      <!-- 3. Frontend Engineers (x2) -->
       <div class="card reveal">
-        <h3>🎨 Designer</h3>
-        <p>Create interfaces that feel calm, clear, and alive.</p>
+        <h3>💻 Frontend Engineer <span class="badge">×2</span></h3>
+        <p>Craft a fast, elegant UI that feels calm and alive.</p>
         <ul class="mini">
-          <li>Human-centered learning UX</li>
-          <li>Visual identity & motion</li>
-          <li>Own craft, shape the brand</li>
+          <li>Modern React stack</li>
+          <li>Clean components & state</li>
+          <li>Polish, accessibility, speed</li>
         </ul>
-        <a href="mailto:founder@kalmuslabs.com?subject=Designer%20-%20Kalmus%20Labs" class="btn small primary equal-btn">Apply now</a>
+        <a href="https://wellfound.com/l/2BGCTa" target="_blank" class="btn small primary equal-btn">Apply now</a>
+      </div>
+
+      <!-- 4. Mobile Engineer -->
+      <div class="card reveal">
+        <h3>📱 Mobile Engineer</h3>
+        <p>Bring BookBuddy to iOS/Android with delightful UX.</p>
+        <ul class="mini">
+          <li>Ship core flows & offline</li>
+          <li>API integrations, auth</li>
+          <li>Perf & animations</li>
+        </ul>
+        <a href="https://wellfound.com/l/2BGFdQ" target="_blank" class="btn small primary equal-btn">Apply now</a>
+      </div>
+
+      <!-- 5. Product Designer -->
+      <div class="card reveal">
+        <h3>🎨 Product Designer</h3>
+        <p>Define our visual language, UX, and design system.</p>
+        <ul class="mini">
+          <li>Figma, prototypes, usability</li>
+          <li>Design system from 0 → 1</li>
+          <li>Pixel-perfect delivery</li>
+        </ul>
+        <a href="https://wellfound.com/l/2BGFkq" target="_blank" class="btn small primary equal-btn">Apply now</a>
+      </div>
+
+      <!-- 6. Motion Designer / Illustrator -->
+      <div class="card reveal">
+        <h3>✨ Motion / Illustrator</h3>
+        <p>Make the brand feel alive with motion & illustration.</p>
+        <ul class="mini">
+          <li>Micro-animations for web/app</li>
+          <li>Illustrations & storytelling</li>
+          <li>Lottie / AE exports</li>
+        </ul>
+        <a href="https://wellfound.com/l/2BGFku" target="_blank" class="btn small primary equal-btn">Apply now</a>
+      </div>
+
+      <!-- 7. DevOps / Infra (Part-Time) -->
+      <div class="card reveal">
+        <h3>⚙️ DevOps / Infra (PT)</h3>
+        <p>CI/CD, cloud, observability — speed with reliability.</p>
+        <ul class="mini">
+          <li>Docker & GitHub Actions</li>
+          <li>AWS/GCP cost-smart setups</li>
+          <li>Monitoring & security</li>
+        </ul>
+        <a href="https://wellfound.com/l/2BGFkz" target="_blank" class="btn small primary equal-btn">Apply now</a>
+      </div>
+
+      <!-- 8. QA Engineer -->
+      <div class="card reveal">
+        <h3>🧪 QA Engineer</h3>
+        <p>Own quality across API, web, mobile, and AI flows.</p>
+        <ul class="mini">
+          <li>Manual + automation</li>
+          <li>Cypress/Playwright, Postman</li>
+          <li>Clear bug reports, fast loops</li>
+        </ul>
+        <a href="https://wellfound.com/l/2BGFkL" target="_blank" class="btn small primary equal-btn">Apply now</a>
+      </div>
+
+      <!-- 9. Community / Content / Ads / PR -->
+      <div class="card reveal">
+        <h3>📣 Community / Content / PR</h3>
+        <p>Shape our voice, grow awareness, and tell the story.</p>
+        <ul class="mini">
+          <li>Socials, newsletters, PR</li>
+          <li>Launch touchpoints & ads</li>
+          <li>User feedback → messaging</li>
+        </ul>
+        <a href="https://wellfound.com/l/2BGFkR" target="_blank" class="btn small primary equal-btn">Apply now</a>
       </div>
     </div>
 
