--- a/index.html
+++ b/index.html
@@ -104,114 +104,140 @@
     <h2 class="seq">Join Us</h2>
     <p class="join-sub seq">Build the future with us - not as a cog, but as an owner.</p>
 
-    <div class="cards">
-      <!-- 1. Tech Lead -->
-      <div class="card reveal">
-        <h3>👨‍💻 Tech Lead</h3>
-        <p>Shape the architecture and ship from MVP → v1.</p>
-        <ul class="mini">
-          <li>Equity from day one</li>
-          <li>Fast decisions, real ownership</li>
-          <li>LLM pipelines, quality foundations</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGFdL" target="_blank" class="btn small primary equal-btn">Apply now</a>
+    <div class="groups">
+
+      <!-- GROUP 1: Core Engineering -->
+      <div class="group reveal">
+        <h3 class="group-title">🧩 Core Engineering</h3>
+        <p class="group-sub">Ship the core product: architecture, APIs, and interfaces.</p>
+
+        <div class="cards">
+          <!-- Tech Lead -->
+          <div class="card">
+            <h3>👨‍💻 Tech Lead</h3>
+            <p>Shape the architecture and ship from MVP → v1.</p>
+            <ul class="mini">
+              <li>Equity from day one</li>
+              <li>Fast decisions, real ownership</li>
+              <li>LLM pipelines, quality foundations</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGFdL" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+
+          <!-- Backend ×2 -->
+          <div class="card">
+            <h3>🛠️ Backend Engineer <span class="badge">×2</span></h3>
+            <p>Build robust APIs, data flows, and AI/RAG services.</p>
+            <ul class="mini">
+              <li>FastAPI, Postgres/Redis, CI/CD</li>
+              <li>Vector DBs & embeddings</li>
+              <li>Own reliability & performance</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGCUZ" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+
+          <!-- Frontend ×2 -->
+          <div class="card">
+            <h3>💻 Frontend Engineer <span class="badge">×2</span></h3>
+            <p>Craft a fast, elegant UI that feels calm and alive.</p>
+            <ul class="mini">
+              <li>Modern React stack</li>
+              <li>Clean components & state</li>
+              <li>Polish, accessibility, speed</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGCTa" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+        </div>
       </div>
 
-      <!-- 2. Backend Engineers (x2) -->
-      <div class="card reveal">
-        <h3>🛠️ Backend Engineer <span class="badge">×2</span></h3>
-        <p>Build robust APIs, data flows, and AI/RAG services.</p>
-        <ul class="mini">
-          <li>FastAPI, Postgres/Redis, CI/CD</li>
-          <li>Vector DBs & embeddings</li>
-          <li>Own reliability & performance</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGCUZ" target="_blank" class="btn small primary equal-btn">Apply now</a>
+      <!-- GROUP 2: Design & Story -->
+      <div class="group reveal">
+        <h3 class="group-title">🎨 Design & Story</h3>
+        <p class="group-sub">Define the feel, voice, and visual identity of BookBuddy.</p>
+
+        <div class="cards">
+          <!-- Product Designer -->
+          <div class="card">
+            <h3>🎨 Product Designer</h3>
+            <p>Define our visual language, UX, and design system.</p>
+            <ul class="mini">
+              <li>Figma, prototypes, usability</li>
+              <li>Design system from 0 → 1</li>
+              <li>Pixel-perfect delivery</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGFkq" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+
+          <!-- Motion / Illustrator -->
+          <div class="card">
+            <h3>✨ Motion / Illustrator</h3>
+            <p>Make the brand feel alive with motion & illustration.</p>
+            <ul class="mini">
+              <li>Micro-animations for web/app</li>
+              <li>Illustrations & storytelling</li>
+              <li>Lottie / AE exports</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGFku" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+
+          <!-- Community / PR -->
+          <div class="card">
+            <h3>📣 Community / Content / PR</h3>
+            <p>Shape our voice, grow awareness, and tell the story.</p>
+            <ul class="mini">
+              <li>Socials, newsletters, PR</li>
+              <li>Launch touchpoints & ads</li>
+              <li>User feedback → messaging</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGFkR" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+        </div>
       </div>
 
-      <!-- 3. Frontend Engineers (x2) -->
-      <div class="card reveal">
-        <h3>💻 Frontend Engineer <span class="badge">×2</span></h3>
-        <p>Craft a fast, elegant UI that feels calm and alive.</p>
-        <ul class="mini">
-          <li>Modern React stack</li>
-          <li>Clean components & state</li>
-          <li>Polish, accessibility, speed</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGCTa" target="_blank" class="btn small primary equal-btn">Apply now</a>
+      <!-- GROUP 3: Delivery & Quality -->
+      <div class="group reveal">
+        <h3 class="group-title">🚀 Delivery & Quality</h3>
+        <p class="group-sub">Ship to users with speed, reliability, and polish.</p>
+
+        <div class="cards">
+          <!-- Mobile Engineer -->
+          <div class="card">
+            <h3>📱 Mobile Engineer</h3>
+            <p>Bring BookBuddy to iOS/Android with delightful UX.</p>
+            <ul class="mini">
+              <li>Ship core flows & offline</li>
+              <li>API integrations, auth</li>
+              <li>Perf & animations</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGFdQ" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+
+          <!-- DevOps / Infra (PT) -->
+          <div class="card">
+            <h3>⚙️ DevOps / Infra (PT)</h3>
+            <p>CI/CD, cloud, observability — speed with reliability.</p>
+            <ul class="mini">
+              <li>Docker & GitHub Actions</li>
+              <li>AWS/GCP cost-smart setups</li>
+              <li>Monitoring & security</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGFkz" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+
+          <!-- QA Engineer -->
+          <div class="card">
+            <h3>🧪 QA Engineer</h3>
+            <p>Own quality across API, web, mobile, and AI flows.</p>
+            <ul class="mini">
+              <li>Manual + automation</li>
+              <li>Cypress/Playwright, Postman</li>
+              <li>Clear bug reports, fast loops</li>
+            </ul>
+            <a href="https://wellfound.com/l/2BGFkL" target="_blank" class="btn small primary equal-btn">Apply now</a>
+          </div>
+        </div>
       </div>
 
-      <!-- 4. Mobile Engineer -->
-      <div class="card reveal">
-        <h3>📱 Mobile Engineer</h3>
-        <p>Bring BookBuddy to iOS/Android with delightful UX.</p>
-        <ul class="mini">
-          <li>Ship core flows & offline</li>
-          <li>API integrations, auth</li>
-          <li>Perf & animations</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGFdQ" target="_blank" class="btn small primary equal-btn">Apply now</a>
-      </div>
-
-      <!-- 5. Product Designer -->
-      <div class="card reveal">
-        <h3>🎨 Product Designer</h3>
-        <p>Define our visual language, UX, and design system.</p>
-        <ul class="mini">
-          <li>Figma, prototypes, usability</li>
-          <li>Design system from 0 → 1</li>
-          <li>Pixel-perfect delivery</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGFkq" target="_blank" class="btn small primary equal-btn">Apply now</a>
-      </div>
-
-      <!-- 6. Motion Designer / Illustrator -->
-      <div class="card reveal">
-        <h3>✨ Motion / Illustrator</h3>
-        <p>Make the brand feel alive with motion & illustration.</p>
-        <ul class="mini">
-          <li>Micro-animations for web/app</li>
-          <li>Illustrations & storytelling</li>
-          <li>Lottie / AE exports</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGFku" target="_blank" class="btn small primary equal-btn">Apply now</a>
-      </div>
-
-      <!-- 7. DevOps / Infra (Part-Time) -->
-      <div class="card reveal">
-        <h3>⚙️ DevOps / Infra (PT)</h3>
-        <p>CI/CD, cloud, observability — speed with reliability.</p>
-        <ul class="mini">
-          <li>Docker & GitHub Actions</li>
-          <li>AWS/GCP cost-smart setups</li>
-          <li>Monitoring & security</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGFkz" target="_blank" class="btn small primary equal-btn">Apply now</a>
-      </div>
-
-      <!-- 8. QA Engineer -->
-      <div class="card reveal">
-        <h3>🧪 QA Engineer</h3>
-        <p>Own quality across API, web, mobile, and AI flows.</p>
-        <ul class="mini">
-          <li>Manual + automation</li>
-          <li>Cypress/Playwright, Postman</li>
-          <li>Clear bug reports, fast loops</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGFkL" target="_blank" class="btn small primary equal-btn">Apply now</a>
-      </div>
-
-      <!-- 9. Community / Content / Ads / PR -->
-      <div class="card reveal">
-        <h3>📣 Community / Content / PR</h3>
-        <p>Shape our voice, grow awareness, and tell the story.</p>
-        <ul class="mini">
-          <li>Socials, newsletters, PR</li>
-          <li>Launch touchpoints & ads</li>
-          <li>User feedback → messaging</li>
-        </ul>
-        <a href="https://wellfound.com/l/2BGFkR" target="_blank" class="btn small primary equal-btn">Apply now</a>
-      </div>
     </div>
 
     <!-- Footer lives INSIDE the final gradient block -->
