--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
         <p class="group-sub">Ship the core product: architecture, APIs, and interfaces.</p>
 
         <div class="cards">
-          <!-- Tech Lead -->
-          <div class="card">
+          <div class="card reveal">
             <h3>👨‍💻 Tech Lead</h3>
             <p>Shape the architecture and ship from MVP → v1.</p>
             <ul class="mini">
@@ -124,8 +123,7 @@
             <a href="https://wellfound.com/l/2BGFdL" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
-          <!-- Backend ×2 -->
-          <div class="card">
+          <div class="card reveal">
             <h3>🛠️ Backend Engineer <span class="badge">×2</span></h3>
             <p>Build robust APIs, data flows, and AI/RAG services.</p>
             <ul class="mini">
@@ -136,8 +134,7 @@
             <a href="https://wellfound.com/l/2BGCUZ" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
-          <!-- Frontend ×2 -->
-          <div class="card">
+          <div class="card reveal">
             <h3>💻 Frontend Engineer <span class="badge">×2</span></h3>
             <p>Craft a fast, elegant UI that feels calm and alive.</p>
             <ul class="mini">
@@ -156,8 +153,7 @@
         <p class="group-sub">Define the feel, voice, and visual identity of BookBuddy.</p>
 
         <div class="cards">
-          <!-- Product Designer -->
-          <div class="card">
+          <div class="card reveal">
             <h3>🎨 Product Designer</h3>
             <p>Define our visual language, UX, and design system.</p>
             <ul class="mini">
@@ -168,8 +164,7 @@
             <a href="https://wellfound.com/l/2BGFkq" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
-          <!-- Motion / Illustrator -->
-          <div class="card">
+          <div class="card reveal">
             <h3>✨ Motion / Illustrator</h3>
             <p>Make the brand feel alive with motion & illustration.</p>
             <ul class="mini">
@@ -180,8 +175,7 @@
             <a href="https://wellfound.com/l/2BGFku" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
-          <!-- Community / PR -->
-          <div class="card">
+          <div class="card reveal">
             <h3>📣 Community / Content / PR</h3>
             <p>Shape our voice, grow awareness, and tell the story.</p>
             <ul class="mini">
@@ -200,8 +194,7 @@
         <p class="group-sub">Ship to users with speed, reliability, and polish.</p>
 
         <div class="cards">
-          <!-- Mobile Engineer -->
-          <div class="card">
+          <div class="card reveal">
             <h3>📱 Mobile Engineer</h3>
             <p>Bring BookBuddy to iOS/Android with delightful UX.</p>
             <ul class="mini">
@@ -212,8 +205,7 @@
             <a href="https://wellfound.com/l/2BGFdQ" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
-          <!-- DevOps / Infra (PT) -->
-          <div class="card">
+          <div class="card reveal">
             <h3>⚙️ DevOps / Infra (PT)</h3>
             <p>CI/CD, cloud, observability — speed with reliability.</p>
             <ul class="mini">
@@ -221,56 +213,4 @@
               <li>AWS/GCP cost-smart setups</li>
               <li>Monitoring & security</li>
             </ul>
-            <a href="https://wellfound.com/l/2BGFkz" target="_blank" class="btn small primary equal-btn">Apply now</a>
-          </div>
-
-          <!-- QA Engineer -->
-          <div class="card">
-            <h3>🧪 QA Engineer</h3>
-            <p>Own quality across API, web, mobile, and AI flows.</p>
-            <ul class="mini">
-              <li>Manual + automation</li>
-              <li>Cypress/Playwright, Postman</li>
-              <li>Clear bug reports, fast loops</li>
-            </ul>
-            <a href="https://wellfound.com/l/2BGFkL" target="_blank" class="btn small primary equal-btn">Apply now</a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <!-- Footer lives INSIDE the final gradient block -->
-    <footer>
-      <img src="logo_main.png" alt="Kalmus Labs Logo" class="footer-logo" />
-      <p>© 2025 Kalmus Labs</p>
-      <a href="https://www.linkedin.com/company/kalmuslabs" target="_blank" class="linkedin">LinkedIn</a>
-    </footer>
-  </section>
-
-  <!-- Sequencing + Reveal -->
-  <script>
-    const seqEls = [...document.querySelectorAll('.seq')];
-    seqEls.forEach((el, i) => {
-      el.style.setProperty('--d', `${i * 110}ms`);
-      el.classList.add('seq-init');
-      requestAnimationFrame(() => el.classList.add('in'));
-    });
-
-    const io = new IntersectionObserver((entries) => {
-      entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('in'); });
-    }, { threshold: 0.18, rootMargin: '0px 0px -14% 0px' });
-
-    document.querySelectorAll('.reveal').forEach(el => {
-      el.classList.add('reveal-init');
-      io.observe(el);
-    });
-
-    const sky = document.querySelector('.sky');
-    addEventListener('scroll', () => {
-      const y = Math.min(170, window.scrollY * 0.12);
-      sky.style.transform = `translateY(${-y}px)`;
-    }, {passive:true});
-  </script>
-</body>
-</html>
+            <a href="https://wellfound.com/l/2BGFkz" target="_b_
