--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <img src="logo_main.png" alt="Kalmus Labs Logo" class="logo seq" />
     <h1 class="seq">Kalmus Labs</h1>
-    <p class="tagline seq">Study & tutoring - finally feels right.</p>
+    <p class="tagline seq">Study & tutoring — finally feels right.</p>
 
     <div class="hero-buttons seq">
       <a href="mailto:founder@kalmuslabs.com" class="btn primary">Contact us</a>
@@ -42,7 +42,7 @@
         <h3>Problem</h3>
         <p>
           AI is reshaping work. People get reduced to spreadsheet rows. Learning still feels lonely:
-          PDFs, jargon, tab-hopping between translators and explainers - zero support, zero flow.
+          PDFs, jargon, tab-hopping between translators and explainers — zero support, zero flow.
         </p>
         <ul class="bullets">
           <li>No built-in help or translation</li>
@@ -55,7 +55,7 @@
         <h3>Belief</h3>
         <p>
           Work and study should feel human. We value equity, growth, and real ownership.
-          You should not wait for a layoff - you should build your future.
+          You should not wait for a layoff — you should build your future.
         </p>
         <ul class="bullets">
           <li>Human-first, builder culture</li>
@@ -73,7 +73,7 @@
         <ul class="bullets">
           <li>Explains concepts in plain language</li>
           <li>Asks good questions; builds mastery</li>
-          <li>Feels like a tutor - not a chatbot</li>
+          <li>Feels like a tutor — not a chatbot</li>
         </ul>
       </article>
     </div>
@@ -102,16 +102,19 @@
   <!-- Join Us -->
   <section id="join" class="join seam-top">
     <h2 class="seq">Join Us</h2>
-    <p class="join-sub seq">Build the future with us - not as a cog, but as an owner.</p>
+    <p class="join-sub seq">Build the future with us — not as a cog, but as an owner.</p>
 
     <div class="groups">
 
-      <!-- GROUP 1: Core Engineering -->
+      <!-- SINGLE GROUP: Open Roles (3) -->
       <div class="group">
         <h3 class="group-title">🧩 Core Engineering</h3>
-        <p class="group-sub">Ship the core product: architecture, APIs, and interfaces.</p>
+        <p class="group-sub">
+          Ship the core product and growth touchpoints. Open roles (3): Tech Lead, Video Editor / Ads, Visual Designer — Worldbuilding.
+        </p>
 
         <div class="cards">
+          <!-- Tech Lead -->
           <div class="card">
             <h3>👨‍💻 Tech Lead</h3>
             <p>Shape the architecture and ship from MVP → v1.</p>
@@ -123,108 +126,28 @@
             <a href="https://wellfound.com/l/2BGFdL" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
+          <!-- Video Editor / Ads -->
           <div class="card">
-            <h3>🛠️ Backend Engineer <span class="badge">×2</span></h3>
-            <p>Build robust APIs, data flows, and AI/RAG services.</p>
+            <h3>🎬 Video Editor / Ads</h3>
+            <p>Create Shorts/Reels/TikToks that convert and partner on paid/organic growth.</p>
             <ul class="mini">
-              <li>FastAPI, Postgres/Redis, CI/CD</li>
-              <li>Vector DBs & embeddings</li>
-              <li>Own reliability & performance</li>
+              <li>Cut, pace, caption, iterate fast</li>
+              <li>Hook testing, ad creative loops</li>
+              <li>Work with analytics & messaging</li>
             </ul>
-            <a href="https://wellfound.com/l/2BGCUZ" target="_blank" class="btn small primary equal-btn">Apply now</a>
+            <a href="https://wellfound.com/l/2BGFdL" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
+          <!-- Visual Designer — Worldbuilding -->
           <div class="card">
-            <h3>💻 Frontend Engineer <span class="badge">×2</span></h3>
-            <p>Craft a fast, elegant UI that feels calm and alive.</p>
+            <h3>🗺️✨ Visual Designer — Worldbuilding</h3>
+            <p>Design backgrounds, ambient UI, and meaningful gamified visuals.</p>
             <ul class="mini">
-              <li>Modern React stack</li>
-              <li>Clean components & state</li>
-              <li>Polish, accessibility, speed</li>
+              <li>Atmosphere, mood, subtle motion</li>
+              <li>Badges, tokens, level states</li>
+              <li>Collaborate with product & motion</li>
             </ul>
-            <a href="https://wellfound.com/l/2BGCTa" target="_blank" class="btn small primary equal-btn">Apply now</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- GROUP 2: Design & Story -->
-      <div class="group">
-        <h3 class="group-title">🎨 Design & Story</h3>
-        <p class="group-sub">Define the feel, voice, and visual identity of BookBuddy.</p>
-
-        <div class="cards">
-          <div class="card">
-            <h3>🎨 Product Designer</h3>
-            <p>Define our visual language, UX, and design system.</p>
-            <ul class="mini">
-              <li>Figma, prototypes, usability</li>
-              <li>Design system from 0 → 1</li>
-              <li>Pixel-perfect delivery</li>
-            </ul>
-            <a href="https://wellfound.com/l/2BGFkq" target="_blank" class="btn small primary equal-btn">Apply now</a>
-          </div>
-
-          <div class="card">
-            <h3>✨ Motion / Illustrator</h3>
-            <p>Make the brand feel alive with motion & illustration.</p>
-            <ul class="mini">
-              <li>Micro-animations for web/app</li>
-              <li>Illustrations & storytelling</li>
-              <li>Lottie / AE exports</li>
-            </ul>
-            <a href="https://wellfound.com/l/2BGFku" target="_blank" class="btn small primary equal-btn">Apply now</a>
-          </div>
-
-          <div class="card">
-            <h3>📣 Community / Content / PR</h3>
-            <p>Shape our voice, grow awareness, and tell the story.</p>
-            <ul class="mini">
-              <li>Socials, newsletters, PR</li>
-              <li>Launch touchpoints & ads</li>
-              <li>User feedback → messaging</li>
-            </ul>
-            <a href="https://wellfound.com/l/2BGFkR" target="_blank" class="btn small primary equal-btn">Apply now</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- GROUP 3: Delivery & Quality -->
-      <div class="group">
-        <h3 class="group-title">🚀 Delivery & Quality</h3>
-        <p class="group-sub">Ship to users with speed, reliability, and polish.</p>
-
-        <div class="cards">
-          <div class="card">
-            <h3>📱 Mobile Engineer</h3>
-            <p>Bring BookBuddy to iOS/Android with delightful UX.</p>
-            <ul class="mini">
-              <li>Ship core flows & offline</li>
-              <li>API integrations, auth</li>
-              <li>Perf & animations</li>
-            </ul>
-            <a href="https://wellfound.com/l/2BGFdQ" target="_blank" class="btn small primary equal-btn">Apply now</a>
-          </div>
-
-          <div class="card">
-            <h3>⚙️ DevOps / Infra (PT)</h3>
-            <p>CI/CD, cloud, observability — speed with reliability.</p>
-            <ul class="mini">
-              <li>Docker & GitHub Actions</li>
-              <li>AWS/GCP cost-smart setups</li>
-              <li>Monitoring & security</li>
-            </ul>
-            <a href="https://wellfound.com/l/2BGFkz" target="_blank" class="btn small primary equal-btn">Apply now</a>
-          </div>
-
-          <div class="card">
-            <h3>🧪 QA Engineer</h3>
-            <p>Own quality across API, web, mobile, and AI flows.</p>
-            <ul class="mini">
-              <li>Manual + automation</li>
-              <li>Cypress/Playwright, Postman</li>
-              <li>Clear bug reports, fast loops</li>
-            </ul>
-            <a href="https://wellfound.com/l/2BGFkL" target="_blank" class="btn small primary equal-btn">Apply now</a>
+            <a href="https://wellfound.com/l/2BMGs9" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
         </div>
       </div>
@@ -248,7 +171,6 @@
       requestAnimationFrame(() => el.classList.add('in'));
     });
 
-    // оставляем observer на будущее, но он не критичен для видимости
     const io = new IntersectionObserver((entries) => {
       entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('in'); });
     }, { threshold: 0.18, rootMargin: '0px 0px -14% 0px' });
