--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <li>Hook testing, ad creative loops</li>
               <li>Work with analytics & messaging</li>
             </ul>
-            <a href="https://wellfound.com/l/2BGFdL" target="_blank" class="btn small primary equal-btn">Apply now</a>
+            <a href="https://wellfound.com/l/2BMGsp" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
           <!-- Visual Designer — Worldbuilding -->
