--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <img src="logo_main.png" alt="Kalmus Labs Logo" class="logo seq" />
     <h1 class="seq">Kalmus Labs</h1>
-    <p class="tagline seq">Study & tutoring — finally feels right.</p>
+    <p class="tagline seq">Study & tutoring - finally feels right.</p>
 
     <div class="hero-buttons seq">
       <a href="mailto:founder@kalmuslabs.com" class="btn primary">Contact us</a>
@@ -42,7 +42,7 @@
         <h3>Problem</h3>
         <p>
           AI is reshaping work. People get reduced to spreadsheet rows. Learning still feels lonely:
-          PDFs, jargon, tab-hopping between translators and explainers — zero support, zero flow.
+          PDFs, jargon, tab-hopping between translators and explainers - zero support, zero flow.
         </p>
         <ul class="bullets">
           <li>No built-in help or translation</li>
@@ -55,7 +55,7 @@
         <h3>Belief</h3>
         <p>
           Work and study should feel human. We value equity, growth, and real ownership.
-          You should not wait for a layoff — you should build your future.
+          You should not wait for a layoff - you should build your future.
         </p>
         <ul class="bullets">
           <li>Human-first, builder culture</li>
@@ -73,7 +73,7 @@
         <ul class="bullets">
           <li>Explains concepts in plain language</li>
           <li>Asks good questions; builds mastery</li>
-          <li>Feels like a tutor — not a chatbot</li>
+          <li>Feels like a tutor - not a chatbot</li>
         </ul>
       </article>
     </div>
@@ -102,7 +102,7 @@
   <!-- Join Us -->
   <section id="join" class="join seam-top">
     <h2 class="seq">Join Us</h2>
-    <p class="join-sub seq">Build the future with us — not as a cog, but as an owner.</p>
+    <p class="join-sub seq">Build the future with us - not as a cog, but as an owner.</p>
 
     <div class="groups">
 
@@ -110,7 +110,7 @@
       <div class="group">
         <h3 class="group-title">🧩 Core Engineering</h3>
         <p class="group-sub">
-          Ship the core product and growth touchpoints. Open roles (3): Tech Lead, Video Editor / Ads, Visual Designer — Worldbuilding.
+          Ship the core product and growth touchpoints. Open roles (3): Tech Lead, Video Editor / Ads, Visual Designer - Worldbuilding.
         </p>
 
         <div class="cards">
@@ -138,9 +138,9 @@
             <a href="https://wellfound.com/l/2BMGsp" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
-          <!-- Visual Designer — Worldbuilding -->
+          <!-- Visual Designer - Worldbuilding -->
           <div class="card">
-            <h3>🗺️✨ Visual Designer — Worldbuilding</h3>
+            <h3>🗺️✨ Visual Designer - Worldbuilding</h3>
             <p>Design backgrounds, ambient UI, and meaningful gamified visuals.</p>
             <ul class="mini">
               <li>Atmosphere, mood, subtle motion</li>
