--- a/index.html
+++ b/index.html
@@ -108,46 +108,47 @@
 
       <!-- SINGLE GROUP: Open Roles (3) -->
       <div class="group">
-        <h3 class="group-title">🧩 Core Engineering</h3>
+        <h3 class="group-title"> Core Engineering</h3>
         <p class="group-sub">
-          Ship the core product and growth touchpoints. Open roles (3): Tech Lead, Video Editor / Ads, Visual Designer - Worldbuilding.
+          Ship the core product, infrastructure, and creative presence.
+          Open roles (3): DevOps / Infrastructure, Video Editor / Creative Growth, Character &amp; World Designer.
         </p>
 
         <div class="cards">
-          <!-- Tech Lead -->
+          <!-- DevOps / Infrastructure Engineer -->
           <div class="card">
-            <h3>👨‍💻 Tech Lead</h3>
-            <p>Shape the architecture and ship from MVP → v1.</p>
+            <h3>🐧 DevOps / Infrastructure Engineer</h3>
+            <p>Build the backbone of BookBuddy – infra, deployments, and reliability.</p>
             <ul class="mini">
-              <li>Equity from day one</li>
-              <li>Fast decisions, real ownership</li>
-              <li>LLM pipelines, quality foundations</li>
+              <li>Set up CI/CD and cloud environments</li>
+              <li>Monitor performance, logs, and alerts</li>
+              <li>Optimize cost, speed, and stability</li>
             </ul>
-            <a href="https://wellfound.com/l/2BGFdL" target="_blank" class="btn small primary equal-btn">Apply now</a>
+            <a href="https://wellfound.com/l/2BGFkz" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
-          <!-- Video Editor / Ads -->
+          <!-- Video Editor / Creative Growth -->
           <div class="card">
-            <h3>🎬 Video Editor / Ads</h3>
-            <p>Create Shorts/Reels/TikToks that convert and partner on paid/organic growth.</p>
+            <h3>🎬 Video Editor / Creative Growth</h3>
+            <p>Make BookBuddy visible, memorable, and shareable across TikTok/Reels/Shorts.</p>
             <ul class="mini">
-              <li>Cut, pace, caption, iterate fast</li>
-              <li>Hook testing, ad creative loops</li>
-              <li>Work with analytics & messaging</li>
+              <li>Create short-form &amp; YouTube edits</li>
+              <li>Craft hooks, pacing, captions, narrative</li>
+              <li>Experiment fast, shape our public voice</li>
             </ul>
             <a href="https://wellfound.com/l/2BMGsp" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
 
-          <!-- Visual Designer - Worldbuilding -->
+          <!-- Character & World Designer -->
           <div class="card">
-            <h3>🗺️✨ Visual Designer - Worldbuilding</h3>
-            <p>Design backgrounds, ambient UI, and meaningful gamified visuals.</p>
+            <h3>🎭 Character &amp; World Designer</h3>
+            <p>Design BookBuddy’s companion characters and cozy-futuristic world.</p>
             <ul class="mini">
-              <li>Atmosphere, mood, subtle motion</li>
-              <li>Badges, tokens, level states</li>
-              <li>Collaborate with product & motion</li>
+              <li>Semi-realistic 2D characters &amp; faces</li>
+              <li>Light 2D animation: idle loops, micro-motion</li>
+              <li>Atmospheric backgrounds &amp; gamified visuals</li>
             </ul>
-            <a href="https://wellfound.com/l/2BMGs9" target="_blank" class="btn small primary equal-btn">Apply now</a>
+            <a href="https://wellfound.com/l/2BSvKM" target="_blank" class="btn small primary equal-btn">Apply now</a>
           </div>
         </div>
       </div>
