--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       <div class="group">
         <h3 class="group-title"> Core Engineering</h3>
         <p class="group-sub">
-          Ship the core product, infrastructure, and creative presence.
-          Open roles (3): DevOps / Infrastructure, Video Editor / Creative Growth, Character &amp; World Designer.
+          Ship the core product, infrastructure, and creative presence.<br><br>
+          Open roles (3): DevOps / Infrastructure, Video Editor / Creative Growth, Character & World Designer.
         </p>
 
         <div class="cards">
